[gd_scene load_steps=33 format=3 uid="uid://kkj00c5m68fe"]

[ext_resource type="PackedScene" uid="uid://dnpu0pnmnkcgj" path="res://scenes/nodes/NPC/NPC.tscn" id="1_l6krp"]
[ext_resource type="Script" path="res://script/mobs/NPC/Enemies/skull_wolf.gd" id="2_0xq5x"]
[ext_resource type="Texture2D" uid="uid://brwi5d78ic7r1" path="res://textures/skullwolf/Massacre Sprite Sheet.png" id="2_ha7pw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ptbn"]
size = Vector2(17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iiiq"]
atlas = ExtResource("2_ha7pw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r18xo"]
atlas = ExtResource("2_ha7pw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tekj"]
atlas = ExtResource("2_ha7pw")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icp6b"]
atlas = ExtResource("2_ha7pw")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pxec"]
atlas = ExtResource("2_ha7pw")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce5c2"]
atlas = ExtResource("2_ha7pw")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuaod"]
atlas = ExtResource("2_ha7pw")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uakku"]
atlas = ExtResource("2_ha7pw")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cj4b"]
atlas = ExtResource("2_ha7pw")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s37vv"]
atlas = ExtResource("2_ha7pw")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux0vk"]
atlas = ExtResource("2_ha7pw")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3b1v"]
atlas = ExtResource("2_ha7pw")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsjs6"]
atlas = ExtResource("2_ha7pw")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y44d"]
atlas = ExtResource("2_ha7pw")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj01g"]
atlas = ExtResource("2_ha7pw")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfcwl"]
atlas = ExtResource("2_ha7pw")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tgsl"]
atlas = ExtResource("2_ha7pw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq331"]
atlas = ExtResource("2_ha7pw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwh8l"]
atlas = ExtResource("2_ha7pw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdfre"]
atlas = ExtResource("2_ha7pw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6icx"]
atlas = ExtResource("2_ha7pw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga6nt"]
atlas = ExtResource("2_ha7pw")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f177s"]
atlas = ExtResource("2_ha7pw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mid2i"]
atlas = ExtResource("2_ha7pw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_budgu"]
atlas = ExtResource("2_ha7pw")
region = Rect2(256, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c204l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iiiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r18xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tekj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icp6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pxec")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce5c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuaod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uakku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cj4b")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s37vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux0vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3b1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsjs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y44d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj01g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfcwl")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tgsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq331")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwh8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdfre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6icx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga6nt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f177s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mid2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_budgu")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nyb51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gplxi"]
radius = 287.446

[node name="SkullWolf" instance=ExtResource("1_l6krp")]
script = ExtResource("2_0xq5x")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-2.5, -8)
shape = SubResource("RectangleShape2D_7ptbn")

[node name="AnimatedSprite2D" parent="." index="1"]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_c204l")
animation = &"attack"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="HitBoxes" parent="." index="3"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" parent="HitBoxes" index="0"]
position = Vector2(-29, -18)
shape = SubResource("CapsuleShape2D_nyb51")

[node name="ChaseArea" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="ChaseArea" index="0"]
shape = SubResource("CircleShape2D_gplxi")

[node name="Label" type="Label" parent="." index="5"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="HitBoxes" to="." method="_on_hit_boxes_body_entered"]
[connection signal="body_exited" from="HitBoxes" to="." method="_on_hit_boxes_body_exited"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
